Load the rake file first

--- a/action.yml
+++ b/action.yml
@@ -7,8 +7,8 @@ inputs:
     required: true
     default: 'World'
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+  changes: # id of output
+    description: 'The files changed by running code gen'
 runs:
   using: 'docker'
   image: 'Dockerfile'
