Update to set outputs

--- a/action.yml
+++ b/action.yml
@@ -2,15 +2,9 @@
 name: 'Hello World'
 description: 'Greet someone and record the time'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
 outputs:
-  changes: # id of output
+  changes:
     description: 'The files changed by running code gen'
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  args:
-    - ${{ inputs.who-to-greet }}
